--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script type="module" src="/src/index.js"></script>
+<script type="module" src="/index.js"></script>
 </body>
 </html>
